--- a/.gitattributes
+++ b/.gitattributes
@@ -23,3 +23,4 @@ imvest-stress-test/StressA_Data/level0 filter=lfs diff=lfs merge=lfs -text
 imvest-stress-test/StressA_Data/globalgamemanagers filter=lfs diff=lfs merge=lfs -text
 imvest-stress-test/StressA_Data/Resources/unity[[:space:]]default[[:space:]]resources filter=lfs diff=lfs merge=lfs -text
 imvest-stress-test/StressA_Data/Resources/unity_builtin_extra filter=lfs diff=lfs merge=lfs -text
+*.apk filter=lfs diff=lfs merge=lfs -text
